Fix resize issue with soft line wrapping. Closes #113

--- a/src/css/editorGrid.sass
+++ b/src/css/editorGrid.sass
@@ -1,6 +1,5 @@
 .editor-grid
   display: flex
-  width: 100%
   height: 100%
   background-color: #300a24
   @media only screen and (max-width: $editor-break-small)
@@ -28,4 +27,5 @@
     .action-link.preview
       color: #774444
   .editor-grid-center
-    flex-grow: 1
+    flex: 1 1 auto
+
